fix missing border-bottom

--- a/source/scss/custom-style.scss
+++ b/source/scss/custom-style.scss
@@ -287,6 +287,7 @@ table {
 	width: 100%;
 	font-size: 1em;
 	color: $dark-grey;
+    border-collapse: collapse;
 	td {
 		height: 30px;
 		padding: 0 10px 0 10px
